--- a/.github/workflows/vercel-deployment.yaml
+++ b/.github/workflows/vercel-deployment.yaml
@@ -26,6 +26,6 @@ jobs:
       - name: Build app
         run: flutter build web
       - name: Deploy to Vercel
-        run: vercel --name passbags --token ${{ secrets.VERCEL_TOKEN }}
+        run: vercel  --token ${{ secrets.VERCEL_TOKEN }}
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
