--- a/.github/workflows/vercel-deployment.yaml
+++ b/.github/workflows/vercel-deployment.yaml
@@ -1,31 +1,28 @@
-name: Deploy to Vercel
-
+name: Vercel Production Deployment
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
   push:
     branches:
       - main
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
-        with:
-          node-version: 14
-
-      - name: Install dependencies
-        run: npm install -g vercel
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
       - name: Build app
         run: flutter build web
-      - name: Deploy to Vercel
-        run: vercel  --token ${{ secrets.VERCEL_TOKEN }}
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy  --prod --token=${{ secrets.VERCEL_TOKEN }} --cwd ./build/web
