--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,20 +22,20 @@ dependencies:
 flutter_launcher_icons:
   android: 'launcher_icon'
   ios: true
-  image_path: 'lib/assets/images/logo.png'
+  image_path: 'lib/assets/image/logo.png'
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: 'lib/assets/images/logo.png'
+    image_path: 'lib/assets/image/logo.png'
     background_color: '#hexcode'
     theme_color: '#hexcode'
   windows:
     generate: true
-    image_path: 'lib/assets/images/logo.png'
+    image_path: 'lib/assets/image/logo.png'
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: 'lib/assets/images/logo.png'
+    image_path: 'lib/assets/image/logo.png'
 
 dev_dependencies:
   flutter_test:
