--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -7,37 +7,66 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-
-      - name: Install dependencies
-        run: npm install -g vercel
 
       - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
 
-      - name: Build app
-        run: flutter build web
+      - name: Install Linux dependencies
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
 
       - name: Get version from pubspec.yaml
         id: version
+        shell: bash
         run: |
           VERSION=$(grep 'version:' pubspec.yaml | awk '{print $2}')
-          echo "::set-output name=version::$VERSION"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Build Web
+        run: flutter build web
+
+      - name: Build Android APK
+        if: matrix.os == 'ubuntu-latest'
+        run: flutter build apk --release
+
+      - name: Build Linux
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          flutter config --enable-linux-desktop
+          flutter build linux --release
+          cd build/linux/x64/release/bundle
+          tar -czf ../../../../../linux-release.tar.gz .
+
+      - name: Build Windows
+        if: matrix.os == 'windows-latest'
+        run: |
+          flutter config --enable-windows-desktop
+          flutter build windows --release
+
+      - name: Build macOS
+        if: matrix.os == 'macos-latest'
+        run: |
+          flutter config --enable-macos-desktop
+          flutter build macos --release
+          cd build/macos/Build/Products/Release
+          zip -r ../../../../../macos-release.zip *.app
 
       - name: Create Release
         id: create_release
+        if: matrix.os == 'ubuntu-latest'
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -47,7 +76,52 @@ jobs:
           draft: false
           prerelease: false
 
+      - name: Upload Android Build
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/app/outputs/flutter-apk/app-release.apk
+          asset_name: app-${{ steps.version.outputs.version }}.apk
+          asset_content_type: application/vnd.android.package-archive
+
+      - name: Upload Linux Build
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: linux-release.tar.gz
+          asset_name: app-${{ steps.version.outputs.version }}-linux.tar.gz
+          asset_content_type: application/gzip
+
+      - name: Upload Windows Build
+        if: matrix.os == 'windows-latest'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/windows/runner/Release
+          asset_name: app-${{ steps.version.outputs.version }}-windows.zip
+          asset_content_type: application/zip
+
+      - name: Upload macOS Build
+        if: matrix.os == 'macos-latest'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: macos-release.zip
+          asset_name: app-${{ steps.version.outputs.version }}-macos.zip
+          asset_content_type: application/zip
+
       - name: Deploy to Vercel
+        if: matrix.os == 'ubuntu-latest'
         run: vercel --token ${{ secrets.VERCEL_TOKEN }}
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
