chore: chore upgrade gradle verion

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -42,27 +42,27 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: flutter build apk --release
 
-      - name: Build Linux
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          flutter config --enable-linux-desktop
-          flutter build linux --release
-          cd build/linux/x64/release/bundle
-          tar -czf ../../../../../linux-release.tar.gz .
+      # - name: Build Linux
+      #   if: matrix.os == 'ubuntu-latest'
+      #   run: |
+      #     flutter config --enable-linux-desktop
+      #     flutter build linux --release
+      #     cd build/linux/x64/release/bundle
+      #     tar -czf ../../../../../linux-release.tar.gz .
 
-      - name: Build Windows
-        if: matrix.os == 'windows-latest'
-        run: |
-          flutter config --enable-windows-desktop
-          flutter build windows --release
+      # - name: Build Windows
+      #   if: matrix.os == 'windows-latest'
+      #   run: |
+      #     flutter config --enable-windows-desktop
+      #     flutter build windows --release
 
-      - name: Build macOS
-        if: matrix.os == 'macos-latest'
-        run: |
-          flutter config --enable-macos-desktop
-          flutter build macos --release
-          cd build/macos/Build/Products/Release
-          zip -r ../../../../../macos-release.zip *.app
+      # - name: Build macOS
+      #   if: matrix.os == 'macos-latest'
+      #   run: |
+      #     flutter config --enable-macos-desktop
+      #     flutter build macos --release
+      #     cd build/macos/Build/Products/Release
+      #     zip -r ../../../../../macos-release.zip *.app
 
       - name: Create Release
         id: create_release
