--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -11,7 +11,10 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
-
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -36,7 +39,20 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Build Web
-        run: flutter build web
+        if: matrix.os == 'ubuntu-latest'
+        run: flutter build web --release --base-href "/passbag/"
+      - name: add privacy.html to output
+        if: matrix.os == 'ubuntu-latest'
+        run: cp privacy.html build/web/privacy.html
+      - name: Upload artifact
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: "./build/web"
+      - name: Deploy to GitHub Pages
+        if: matrix.os == 'ubuntu-latest'
+        id: deployment
+        uses: actions/deploy-pages@v4
 
       - name: Build Android APK
         if: matrix.os == 'ubuntu-latest'
@@ -84,7 +100,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: build/app/outputs/flutter-apk/app-release.apk
-          asset_name: app-${{ steps.version.outputs.version }}.apk
+          asset_name: passbag-${{ steps.version.outputs.version }}.apk
           asset_content_type: application/vnd.android.package-archive
 
       # - name: Upload Linux Build
