--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,18 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "passbags",
+      "name": "passbag",
       "request": "launch",
       "type": "dart"
     },
     {
-      "name": "passbags (profile mode)",
+      "name": "passbag (profile mode)",
       "request": "launch",
       "type": "dart",
       "flutterMode": "profile"
     },
     {
-      "name": "passbags (release mode)",
+      "name": "passbag (release mode)",
       "request": "launch",
       "type": "dart",
       "flutterMode": "release"
